force-app/main/default/objects/Non_User_Client_Team__c/Non_User_Client_Team__c.object-meta.xml
<CustomObject>
    <description>Non-User Client Team object</description>
    <label>Non-User Client Team</label>
    <nameField>
        <displayFormat>NUCT-{00000000}</displayFormat>
        <label>Non-User Client Team Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-User Client Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>