force-app/main/default/objects/Non_User_Client_Team__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Contact_Name__r.MailingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>