force-app/main/default/objects/Non_User_Client_Team__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Client Name</description>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non-User Client Teams</relationshipLabel>
    <relationshipName>Non_User_Client_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>