force-app/main/default/objects/Non_User_Client_Team__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Contact Name</description>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bank Contact Record Type</value>
        </filterItems>
        <filterItems>
            <field>Contact.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Contact.Active_User__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Non-User Client Teams</relationshipLabel>
    <relationshipName>Non_User_Client_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>