force-app/main/default/objects/Non_User_Client_Team__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Contact_Name__r.Department</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>